Prevent Duplicates is now an option IPTables < 1.4 compatability achieved through new mode

--- a/config.json
+++ b/config.json
@@ -10,5 +10,7 @@
     "verbose": true,
     "notification_cmd": "",
     "ip4tables_cmd": "iptables",
-    "ip6tables_cmd": "ip6tables"
+    "ip6tables_cmd": "ip6tables",
+    "prevent_duplicates": true,
+    "iptables_compatability_mode": false
 }
